<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dev_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mannysight.lagosjavadevs.DevProfile.DevProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_dev_profile_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/profile_background"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/dev_profile_layout_size"
                android:layout_height="@dimen/dev_profile_layout_size"
                android:layout_margin="@dimen/margin_padding_xsmall">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/activity_dev_profile_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/activity_dev_profile_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/activity_dev_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_xtiny"
                android:text="@string/username"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_dev_profile_profile_url"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_xlarge"
                android:layout_marginTop="@dimen/margin_padding_large"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/github_profile_url"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_xxnormal"
                android:textStyle="bold|italic" />
            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/activity_dev_profile_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_xxnormal"
                android:drawableLeft="@drawable/share_icon"
                android:drawableStart="@drawable/share_icon"
                android:padding="@dimen/margin_padding_xtiny"
                android:text="@string/share"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
